ranged data